lang.java.statics.test/tests/positive/interfaces/implements-interface-with-extends.yes.javtest
STATIX ok
JAVAC  ok

[I]
interface J {
    public void m();
}

interface K {
    public void n();
}

interface I extends J, K {}

[A]
class A implements I {
  public void m() {}
  public void n() {}
} 
