lang.java.statics.test/tests/negative/interfaces/implements-interface-with-extends.no.javtest
STATIX fail java\.interfaces\.cls-implements-sig
JAVAC  fail A is not abstract and does not override abstract method .* in K

[I]
interface J {
    public void m();
}

interface K {
    public void n();
}

interface I extends J, K {}

[A]
class A implements I {
  public void m() {}
}
